prevent overlap issue since padding was tweaked

--- a/resources/sass/components/publish.scss
+++ b/resources/sass/components/publish.scss
@@ -106,7 +106,7 @@ code.parent-url {
         position: absolute;
         top: 0;
         left: 0;
-        bottom: 68px;
+        bottom: 71px;
         right: 0;
         overflow: auto;
     }
